--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "format": "prettier --write ."
   },
   "dependencies": {
+    "@react-native-firebase/app": "^20.1.0",
+    "@react-native-firebase/storage": "^20.1.0",
     "@react-native-masked-view/masked-view": "^0.3.1",
     "@react-navigation/native": "^6.1.17",
     "@react-navigation/stack": "^6.3.29",
@@ -23,6 +25,7 @@
     "react-native": "0.74.2",
     "react-native-camera": "^4.2.1",
     "react-native-gesture-handler": "^2.16.0",
+    "react-native-image-picker": "^7.1.2",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-qrcode-scanner": "^1.5.5",
     "react-native-safe-area-context": "^4.10.1",
