--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "react-native-gesture-handler": "^2.16.0",
     "react-native-image-picker": "^7.1.2",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-onesignal": "^5.2.1",
     "react-native-qrcode-scanner": "^1.5.5",
     "react-native-safe-area-context": "^4.10.1",
     "react-native-screens": "^3.31.1",
