--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-navigation/stack": "^6.3.29",
     "@rneui/base": "^4.0.0-rc.7",
     "@rneui/themed": "^4.0.0-rc.8",
+    "dotenv": "^16.4.5",
     "firebase": "^10.11.1",
     "formik": "^2.4.6",
     "react": "18.2.0",
